<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".RegisterPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="150sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/ptserif_regular"
            android:text="@string/createAccount"
            android:textColor="@color/secondary"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:fontFamily="@font/ptserif_regular"
                android:text="@string/haveAccount"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:fontFamily="@font/ptserif_regular"
                android:text="@string/signIn"
                android:textColor="@color/accent" />
        </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/roundedcorners"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/ptserif_regular"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingLeft="16sp"
            android:text="Name"
            android:textColorHint="@color/lightGray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/roundedcorners"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/ptserif_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16sp"
            android:textColorHint="@color/lightGray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/roundedcorners"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/ptserif_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16sp"
            android:textColorHint="@color/lightGray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="280dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="210dp"
            android:backgroundTint="@color/accent"
            android:fontFamily="@font/ptserif_regular"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/signUp"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary"
            android:textColorLink="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>