<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".NewPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newpwd"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="150sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/ptserif_regular"
            android:text="@string/newpwd"
            android:textColor="@color/secondary"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/enterNewPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="1sp"
            android:fontFamily="@font/ptserif_regular"
            android:text="@string/enterNewPwd"
            android:textColor="@color/secondary" />

        <EditText
            android:id="@+id/Pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundedcorners"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/ptserif_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16sp"
            android:textColorHint="@color/lightGray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/confirmPwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundedcorners"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/ptserif_regular"
            android:hint="@string/confirmPwd"
            android:inputType="textPassword"
            android:paddingLeft="16sp"
            android:textColorHint="@color/lightGray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnConfirmPwd"
            android:layout_width="223dp"
            android:layout_height="48dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="210dp"
            android:backgroundTint="@color/accent"
            android:fontFamily="@font/ptserif_regular"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/btnConfirmPwd"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary"
            android:textColorLink="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>