<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".InstrumentsPage">

    <Button
        android:id="@+id/backbutton2"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/accent"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/backbutton1"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="normal"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/downloadMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:text="@string/instruMain"
        android:textColor="@color/secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="67dp"
        android:layout_height="84dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/search" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backbutton2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="382dp"
        android:layout_height="499dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/guitarImage"
                android:layout_width="50dp"
                android:layout_height="88dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/guitar" />

            <TextView
                android:id="@+id/guitar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/guitar1"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pianoImage"
                android:layout_width="50dp"
                android:layout_height="88dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/piano" />

            <TextView
                android:id="@+id/piano1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/piano1"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/drumImage"
                android:layout_width="50dp"
                android:layout_height="88dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/drums" />

            <TextView
                android:id="@+id/drums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/drums1"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/violinImage"
                android:layout_width="50dp"
                android:layout_height="88dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/violin" />

            <TextView
                android:id="@+id/violin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/violin1"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginBottom="135dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fluteImage"
                android:layout_width="50dp"
                android:layout_height="88dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/flute" />

            <TextView
                android:id="@+id/flute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/flute1"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="-650dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="405dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="52dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/instruImage"
                android:layout_width="70dp"
                android:layout_height="67dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/instru" />

            <ImageView
                android:id="@+id/searchImage"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/search" />

            <ImageView
                android:id="@+id/favoriteImage"
                android:layout_width="63dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/favorite" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="44dp"
                android:layout_height="59dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/pp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="430dp"
            android:layout_height="62dp"
            android:layout_marginStart="-7dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/homei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/ptserif_bold"
                android:text="@string/homei"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/ptserif_bold"
                android:text="@string/instru"
                android:textColor="@color/accent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/ptserif_bold"
                android:text="@string/search"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/ptserif_bold"
                android:text="@string/favorite"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/ptserif_bold"
                android:text="@string/profile"
                android:textColor="@color/secondary"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider6"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="11dp"
        android:background="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>